--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "develop": "strapi develop",
     "start": "strapi start",
-    "build": "strapi build",
+    "build": "strapi develop",
     "strapi": "strapi"
   },
   "devDependencies": {},
